<resources>
    <string name="app_name">Remotely</string>

    <string name="activity_discovery_title">Available devices</string>

    <string name="discovery_nothing">Searching for available devices…</string>
    <string name="show_keyboard">Show keyboard</string>

    <string name="button_vol_up">Volume up</string>
    <string name="button_vol_down">Volume down</string>
    <string name="button_vol_mute">Mute</string>
    <string name="button_mm_play">Play</string>
    <string name="button_mm_pause">Pause</string>

    <string name="button_key_up">Up</string>
    <string name="button_key_down">Down</string>
    <string name="button_key_left">Left</string>
    <string name="button_key_right">Right</string>
</resources>
