<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn_key_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_up_black_48dp"
            android:contentDescription="@string/button_key_up"
            style="@style/KeyButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn_key_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_left_black_48dp"
            android:contentDescription="@string/button_key_left"
            style="@style/KeyButton" />

        <ImageButton
            android:id="@+id/btn_key_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_down_black_48dp"
            android:contentDescription="@string/button_key_down"
            style="@style/KeyButton" />

        <ImageButton
            android:id="@+id/btn_key_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_right_black_48dp"
            android:contentDescription="@string/button_key_right"
            style="@style/KeyButton" />

    </LinearLayout>

</LinearLayout>