<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ControlActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:transitionName="toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@drawable/toolbar_background"
            android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_volume_down"
                    android:src="@drawable/ic_volume_down_black_48dp"
                    android:contentDescription="@string/button_vol_down"
                    style="@style/ControlButton" />

                <ImageButton
                    android:id="@+id/btn_volume_mute"
                    android:src="@drawable/ic_volume_off_black_48dp"
                    android:contentDescription="@string/button_vol_mute"
                    style="@style/ControlButton" />

                <ImageButton
                    android:id="@+id/btn_volume_up"
                    android:src="@drawable/ic_volume_up_black_48dp"
                    android:contentDescription="@string/button_vol_up"
                    style="@style/ControlButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true">

                <ImageButton
                    android:id="@+id/btn_volume_play"
                    android:src="@drawable/ic_play_arrow_black_48dp"
                    android:contentDescription="@string/button_mm_play"
                    style="@style/ControlButton" />

                <ImageButton
                    android:id="@+id/btn_volume_pause"
                    android:src="@drawable/ic_pause_black_48dp"
                    android:contentDescription="@string/button_mm_pause"
                    style="@style/ControlButton" />

            </LinearLayout>

        </RelativeLayout>

        <pw.bitset.remotely.trackpad.TrackpadView
            android:id="@+id/trackpad"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_gravity="center" />

        <pw.bitset.remotely.extrakeys.ExtraKeysView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_gravity="center" />

    </LinearLayout>

</LinearLayout>
